# ORSPO

./: README.md  literature.md  main  main.c
bdz/Task002/: main.c  myfile
bdz/Task003/: main  main.c  mm
bdz/Task004/: config.h  main  mm
bdz/Task005/: coMain.s  main  prMain
bdz/Task006/: main
bdz/Task007/: main
bdz/Task008/: main.c
bdz/Task011/: ec  errno  errno.c  mpr  myprog.c
bdz/Task012/: Makefile
bdz/Task013/: Makefile
bdz/Task014/: CMakeLists.txt
bdz/Task015/: CMakeLists.txt
bdz/Task015/lib/: CMakeLists.txt
bdz/Task016/: main.out  test.out
bdz/Task017/: gv
bdz/Task018/: leak  leak.c
bdz/Task019/: AtomicOperationAndCache  cachegrind.out.10647  cachegrind.out.10661  cachegrind.out.10672  cachegrind.out.10681  cachegrind.out.10727  cachegrind.out.10761  cachegrind.out.10778  mm
bdz/Task021/: main  main.c  prog1
bdz/Task022/: def  definition.c  definition.c`
bdz/Task023/: precision
bdz/Task024/: max.c
bdz/Task025/: main  main.c
bdz/Task026/: main.c  timer
bdz/Task027/: daytime  main.c
bdz/Task028/: main  main.c
bdz/Task029/: main  main.c
bdz/Task030/: main  main.c
bdz/Task031/: main  main.c
bdz/Task032/: Makefile  main  main.c
bdz/Task033/: Makefile  main  main.c
bdz/Task035/: main  main.c
bdz/Task036/: Makefile  main  main.c
bdz/Task038/: inlinetest
bdz/Task040/: main  main.c
bdz/Task041/: main  main.c
bdz/Task042/: main  main.c
bdz/Task043/: main  main.c
bdz/Task044/: main  main.c
bdz/Task045/: main  main.c
bdz/Task046/: main
bdz/Task048/: main  main.c
bdz/Task049/: Makefile  dynarray.c  (+3 more)
(+111 files in other folders)
